# healthcare-orchestrator

./: .env.example  .gitignore  README.md  pyproject.toml
src/agents/: coordinator.py  sample.py  ui_chat.py
src/agents/plugin/: PatientStatus.py  PatientTimeline.py  StorageQuery.py  TumorBoardReview.py
src/data_models/: __init__.py  chat_artifact.py  chat_artifact_accessor.py  chat_context.py  chat_context_accessor.py  clinical_note_accessor.py  data_access.py  image_accessor.py  patient_data.py  plugin_configuration.py  tumor_board_summary.py
src/data_models/fhir/: fhir_clinical_note_accessor.py
src/healthcare_orchestrator/: agent.py
src/routes/: __init__.py
src/routes/patient_data/: __init__.py  patient_data_routes.py
src/tools/content_export/: __init__.py  content_export.py  timeline_image.py
src/tools/templates/: tumor_board_template1.docx  tumor_board_template2.docx
src/utils/: __init__.py  model_utils.py
